# rust-scratchpad

./: Cargo.toml  README.md  config.txt
examples/: axum-routing.rs  clone_on_write.rs  concurrency_and_shared_state.rs  data_transformer_generics.rs  file_io_and_error_handling.rs  immutability.rs  iterators.rs  lifetime.rs  macros.rs  middlewares.rs  parallelism.rs  secure_file_uploader.rs  serde-deserialization.rs  unsafe.rs
