[package]
name = "rust-scratchpad"
version = "0.1.0"
edition = "2024"
authors = ["Patrick Tabarelli <patrick.tabarelli@gmail.com>"]

[dependencies]
axum = "0.8.9"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net"] }
